wgsl_to_wgpu/src/snapshots/write_vertex_module_single_input_float16.snap
---
source: wgsl_to_wgpu/src/lib.rs
---
impl VertexInput0 {
    pub const VERTEX_ATTRIBUTES: [wgpu::VertexAttribute; 3] = [
        wgpu::VertexAttribute {
            format: wgpu::VertexFormat::Float16,
            offset: std::mem::offset_of!(VertexInput0, a) as u64,
            shader_location: 0,
        },
        wgpu::VertexAttribute {
            format: wgpu::VertexFormat::Float16x2,
            offset: std::mem::offset_of!(VertexInput0, b) as u64,
            shader_location: 1,
        },
        wgpu::VertexAttribute {
            format: wgpu::VertexFormat::Float16x4,
            offset: std::mem::offset_of!(VertexInput0, c) as u64,
            shader_location: 2,
        },
    ];
    pub const fn vertex_buffer_layout(
        step_mode: wgpu::VertexStepMode,
    ) -> wgpu::VertexBufferLayout<'static> {
        wgpu::VertexBufferLayout {
            array_stride: std::mem::size_of::<VertexInput0>() as u64,
            step_mode,
            attributes: &VertexInput0::VERTEX_ATTRIBUTES,
        }
    }
}
